# hydradb-bench

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  analyze_experiments.py  generate_experiment_configs.py  generate_release_notes.py  generate_test_data.py  json_to_csv.py  pyproject.toml  run_benchmark.py  run_experiments.py
.claude/skills/: analyze-reports.md  codebase-overview.md  configure-benchmark.md  generate-test-data.md  run-benchmark.md  troubleshoot.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
config/: benchmark.yaml  financebench.yaml  legal_benchmark.yaml  legalbench.yaml
config/experiments/: 01_baseline.yaml  02_alpha_0_0.yaml  02_alpha_0_3.yaml  02_alpha_0_5.yaml  02_alpha_0_7.yaml  02_alpha_1_0.yaml  03_no_graph.yaml  04_fast_mode.yaml  05_k_15.yaml  05_k_20.yaml  05_k_3.yaml  05_k_5.yaml  06_boolean_and.yaml  06_boolean_or.yaml  07_fast_no_graph.yaml  08_recall_preferences.yaml  manifest.yaml
data/: financebench_samples.json  legal_contractnli_samples.json  legal_privacyqa_samples.json  legalbench_samples.json  multi_turn_dataset.json  test_dataset.json
data/contractnli/: 01_Bosch-Automotive-Service-Solutions-Mutual-Non-Disclosure-Agreement-7-12-17.txt  12032018_NDA_The%20Munt_EN.txt  5-NSK-Confidentiality-Agreement-for-Suppliers.txt  ADVANIDE-NON-DISCLOSURE-AGREEMENT.txt  AGProjects-NDA.txt  AfriGIS_Client-NDA_Template_2019.txt  Aspiegel_NDA_template.txt  BCG-Mutual-NDA.txt  BT_NDA.txt  CBP%20Non-Disclosure%20Form_October2018.txt  CopAcc_NDA-and-ToP-Mentors_2.0_2017.txt  DBT%20Mutual%20NDA.txt  Data Use Agreement New York City.txt  Data_Use_and_Non_Disclosure_Data_Disclosed_to_MDCH_Trauma_Registry_Final_465518_7.txt  GreenStorm%20NDCSC.txt  (+79 more)
hydradb-finance-bench/: .env.example  README.md  convert_pdfs_to_markdown.py  pyproject.toml  run_benchmark.py  source_id_map.json
release-notes-agent/: AGENT_PROMPT.md  README.md  config.py  fetch_prs.py  generate.py  post_to_slack.py  test_release_notes_agent.py
release_notes/: __init__.py  analyzer.py  formatter.py  github_collector.py  models.py  slack_collector.py
scripts/: bootstrap.sh  clean_corpus.py  convert_legal_datasets.py  hydradb_concurrency_test.py
synthetic_data/: 20260328_172902.json
tests/: conftest.py  test_analyze_experiments.py  test_client.py  test_evaluator.py  test_hf_loader.py  test_release_notes.py  test_reporter.py
(+764 files in other folders)
