[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydradb-deepeval-bench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tiktoken>=0.7.0",
    "deepeval>=1.0",
    "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
