[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydradb-deepeval-bench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tiktoken>=0.7.0",
    "deepeval>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]
datagen = [
    "chromadb>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (acceptable in benchmarks)
    "T201",   # print statements (CLI tool uses print)
]

[tool.ruff.lint.isort]
known-first-party = ["hydradb_deepeval"]
